crates/uselesskey-core-sink/tests/snapshots/snapshots_sink__sink_cleanup_on_drop.snap
---
source: crates/uselesskey-core-sink/tests/snapshots_sink.rs
expression: result
---
exists_before_drop: true
exists_after_drop: false
