crates/uselesskey-core-sink/tests/snapshots/snapshots_sink__sink_der_bytes.snap
---
source: crates/uselesskey-core-sink/tests/snapshots_sink.rs
expression: result
---
description: DER bytes artifact
suffix: ".der"
content_len: 6
path_exists: true
has_expected_extension: true
debug_contains_type_name: true
