crates/uselesskey-core-sink/tests/snapshots/snapshots_sink__sink_pem_string.snap
---
source: crates/uselesskey-core-sink/tests/snapshots_sink.rs
expression: result
---
description: PEM string artifact
suffix: ".pem"
content_len: 53
path_exists: true
has_expected_extension: true
debug_contains_type_name: true
