crates/uselesskey-core-sink/tests/snapshots/snapshots_sink__sink_txt_artifact.snap
---
source: crates/uselesskey-core-sink/tests/snapshots_sink.rs
expression: result
---
description: plain text artifact
suffix: ".txt"
content_len: 11
path_exists: true
has_expected_extension: true
debug_contains_type_name: true
